@@ -61,7 +61,7 @@
         Maintain separation between the artifact id and the version to help prevent
         merge conflicts between commits changing the GA and those changing the V.
         -->
-        <version>35.0.0.Final-SNAPSHOT</version>
+        <version>36.0.0.Beta1-SNAPSHOT</version>
     </parent>
 
     <artifactId>wildfly-testsuite</artifactId>
@@ -133,7 +133,7 @@
         <jboss.domain.server.args></jboss.domain.server.args>
 
         <!-- Additional JVM args, like those for EC2. -->
-        <jvm.args.other>-server</jvm.args.other>
+        <jvm.args.other>-server -Djdk.tracePinnedThreads=full</jvm.args.other>
 
         <!-- Logging config -->
         <testLogToFile>true</testLogToFile>
@@ -399,6 +399,7 @@
             <modules>
                 <module>build-demander-base</module> <!-- Ensure base server build/dist modules used by tests are built -->
                 <module>aggregator-base</module>
+                <module>integration</module>
             </modules>
         </profile>
         <profile>
@@ -408,6 +409,7 @@
             <modules>
                 <module>build-demander-expansion</module> <!-- Ensure expansion server build/dist modules used by tests are built -->
                 <module>aggregator-expansion</module>
+                <module>integration</module>
             </modules>
         </profile>
         <profile>
@@ -416,6 +418,7 @@
             <modules>
                 <module>build-demander-preview</module> <!-- Ensure preview server build/dist modules used by tests are built -->
                 <module>aggregator-preview</module>
+                <module>integration</module>
             </modules>
         </profile>
         <!-- These execute in all feature pack contexts, so declare them here instead
@@ -1154,6 +1157,35 @@
                                 </configuration>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>ts.disable-container-tests-on-windows.profile</id>
+            <!--
+                There is currently no way to identify hosts on which Docker-based tests should not run apart from an
+                OS check. There are CI updates in the pipeline (see https://issues.redhat.com/browse/WFCI-63 and
+                https://issues.redhat.com/browse/WFCI-64, for example) that will require this to be modified. Ideally,
+                a system property or environment variable can be set to indicate that such tests should not be run. For
+                now, we'll have to live with an OS check, which addresses the immediate need.
+            -->
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <org.arquillian.testcontainers.docker.required.exception>org.junit.AssumptionViolatedException</org.arquillian.testcontainers.docker.required.exception>
+                            </systemPropertyVariables>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
